--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
-    "@tailwindcss/vite": "^4.0.8"
+    "@tailwindcss/vite": "^4.0.8",
+    "lucide-react": "^0.475.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.0.0",
