--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "@tailwindcss/vite": "^4.0.8",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.475.0",
     "react-icons": "^5.5.0"
   },
