--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/vite": "^4.0.8",
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.475.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
